# GameOfLife

./: CMakeLists.txt  GameBoard.h  Matrix.h  MenuManager.h  README.md  VideoManager.h  input.txt  main.cpp
